change to docsify

--- a/prepare/02.md
+++ b/prepare/02.md
@@ -9,7 +9,7 @@
 
 ## 使用Visual Studio Code + CMake生成项目(推荐)
 
-这种方式仍需要你先安装好Visual Studio，如果你考虑使用RenderDoc作为图形调试器，又或者对CMake比较熟悉的话可以尝试。目前个人比较推荐使用这种方式。
+这种方式仍需要你先安装好Visual Studio，如果你考虑在VSCode编写项目，又或者对CMake比较熟悉的话可以尝试。目前个人比较推荐使用这种方式。
 
 首先直接在扩展中安装`C/C++ Extension Pack`，里面包含我们需要用到的一些插件
 
@@ -73,7 +73,7 @@ set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE
 #         set(SHADER_TYPE "Vertex")
 #     elseif("${SHADER_TYPE}" STREQUAL "hs") 
 #         set(SHADER_TYPE "Hull")
-#     elseif("${SHADER_TYPE}" STREQUAL "ds") 
+# 	  elseif("${SHADER_TYPE}" STREQUAL "ds") 
 #         set(SHADER_TYPE "Domain")
 #     elseif("${SHADER_TYPE}" STREQUAL "gs") 
 #         set(SHADER_TYPE "Geometry")
@@ -127,7 +127,7 @@ DirectX11 Test
 
 然后ctrl + shift + P调出用于执行命令的输入框，找到`CMake：快速入门`，然后根据你安装的VS版本选择toolkit，若本机为64位，直接选择`amd64`版本的。每次修改cmake后需要保存，然后cmake就会自动运行并生成VS项目(但不需要打开)。在下方的菜单栏选择build会编译项目。编译成功后就可以调试或运行了。
 
-![](../.gitbook/assets/How-To-Build-Your-Project/012.png)
+![](../assets/How-To-Build-Your-Project/012.png)
 
 如果你还是不习惯在VSCode写代码，可以先让CMake生成VS项目，然后在VS项目里面写代码。
 
@@ -135,11 +135,11 @@ DirectX11 Test
 
 新建项目从Windows桌面向导开始：
 
-![](../.gitbook/assets/How-To-Build-Your-Project/001.png)
+![](../assets/How-To-Build-Your-Project/001.png)
 
 在填写好项目名称后，点击创建会弹出这样一个子窗口。我们需要按下图的方式操作来创建出一个空项目的桌面应用程序，最后点击确定即可：
 
-![](../.gitbook/assets/How-To-Build-Your-Project/002.png)
+![](../assets/How-To-Build-Your-Project/002.png)
 
 **以项目01为例，现在你可以尝试将本教程项目01中用到的所有头文件和源文件复制到你的项目目录，再把它们拖进你的项目中。**
 
@@ -157,7 +157,7 @@ DirectX11 Test
 
 也可以在项目属性-链接器-输入-附加依赖项 添加上面的库。
 
-![](../.gitbook/assets/How-To-Build-Your-Project/003.png)
+![](../assets/How-To-Build-Your-Project/003.png)
 
 ### 移除你的项目中有关DX SDK的库路径和包含路径
 
@@ -167,13 +167,13 @@ DirectX11 Test
 
 在项目属性页中可以直接进行修改。当然现在比较新的VS都默认使用Unicode字符集。
 
-![](../.gitbook/assets/How-To-Build-Your-Project/004.png)
+![](../assets/How-To-Build-Your-Project/004.png)
 
 ### Win7系统下的额外配置
 
 由于Win10 SDK中的某些函数在Win7是不支持的，我们还需要在属性页-配置属性-C/C++ -预处理器中，添加预处理器定义以限制API集合：`_WIN32_WINNT=0x601`
 
-![](../.gitbook/assets/How-To-Build-Your-Project/005.png)
+![](../assets/How-To-Build-Your-Project/005.png)
 
 ### 文件本身的编码设置及编译时编码识别
 
@@ -183,17 +183,17 @@ DirectX11 Test
 
 在项目属性页-C/C++ -命令行中添加`/utf-8`来强制指定代码页
 
-![](../.gitbook/assets/How-To-Build-Your-Project/006.png)
+![](../assets/How-To-Build-Your-Project/006.png)
 
 当前所给项目下的绝大部分\*.cpp, \*.h, \*.hlsl, \*.hlsli使用的文件编码为**Unicode(UTF-8无签名)-代码页65001**
 
 但从VS创建出来的文件默认编码是ANSI编码（详细的为**简体中文(GB2312)-代码页936**），需要对非UTF-8无签名编码的文件进行转码。种比较麻烦的方法是，在解决方案资源管理器中选中指定文件后，点击文件-另存为-编码保存，最后找到**Unicode(UTF-8无签名)-代码页65001**保存即可。
 
-![](../.gitbook/assets/How-To-Build-Your-Project/007.png)
+![](../assets/How-To-Build-Your-Project/007.png)
 
 **还有一种办法是在VS安装扩展。在扩展-管理扩展，然后找到Force UTF-8(No BOM)安装**：
 
-![](../.gitbook/assets/How-To-Build-Your-Project/008.png)
+![](../assets/How-To-Build-Your-Project/008.png)
 
 安装该插件后，在你保存代码的时候就会强制修改文件编码为UTF-8了。
 
@@ -203,11 +203,11 @@ DirectX11 Test
 
 如果你是直接用空项目的模板创建的项目，那很可能会遇到下面的问题：
 
-![](../.gitbook/assets/How-To-Build-Your-Project/009.png)
+![](../assets/How-To-Build-Your-Project/009.png)
 
 因为默认的空项目指定的子系统有可能是未明确，也可能是控制台（用的是传统的`main`函数而不是`WinMain`）。为此还需要修改项目配置。
 
-![](../.gitbook/assets/How-To-Build-Your-Project/010.png)
+![](../assets/How-To-Build-Your-Project/010.png)
 
 ### 安装HLSL扩展
 
@@ -215,4 +215,4 @@ DirectX11 Test
 
 > **注意：目前VS2022版本的HLSL扩展不支持代码补全！**
 
-![](../.gitbook/assets/How-To-Build-Your-Project/011.png)
+![](../assets/How-To-Build-Your-Project/011.png)
