测试语法高亮
添加评论

--- a/docs/part1/03.md
+++ b/docs/part1/03.md
@@ -155,7 +155,7 @@ m_pd3dImmediateContext->IASetIndexBuffer(m_pIndexBuffer.Get(), DXGI_FORMAT_R32_U
 
 在HLSL中，常量缓冲区的变量类似于C++这边的全局常量，供着色器代码使用。下面是一个HLSL常量缓冲区示例：
 
-```
+```hlsl
 cbuffer ConstantBuffer : register(b0)
 {
     matrix g_World; 
@@ -328,7 +328,7 @@ m_pd3dImmediateContext->VSSetConstantBuffers(0, 1, m_pConstantBuffer.GetAddressO
 
 该例程所用的HLSL代码如下：
 
-```cpp
+```hlsl
 //Cube.hlsli
 
 cbuffer ConstantBuffer : register(b0)
@@ -353,7 +353,7 @@ struct VertexOut
 
 ```
 
-```cpp
+```hlsl
 // Cube_VS.hlsl
 #include "Cube.hlsli"
 
@@ -368,7 +368,7 @@ VertexOut VS(VertexIn vIn)
 }
 ```
 
-```cpp
+```hlsl
 // Cube_PS.hlsl
 #include "Cube.hlsli"
 
