补齐3-10章图片

--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -4,11 +4,10 @@
 
 **此外，在阅读本章内容之前，你还需要先浏览下面这些内容**：
 
-| 章节                                                         |
-| ------------------------------------------------------------ |
-| [HLSL语法入门](../misc/HLSL.md)                              |
-| [ComPtr智能指针](https://www.cnblogs.com/X-Jun/p/10189859.html) |
-| [HR宏关于dxerr库的替代方案](https://www.cnblogs.com/X-Jun/p/10170535.html) |
+| 章节                                       |
+| ------------------------------------------ |
+| [ComPtr智能指针](../misc/ComPtr.md)        |
+| [HR宏关于dxerr库的替代方案](../misc/HR.md) |
 
 这一章内容大部分属于龙书的内容，但仍有一些不同的地方，这些是跟龙书有差异的部分：
 
@@ -26,14 +25,6 @@
 6. Win32创建窗口和高精度计时器GameTimer的实现按实际需要自行学习，教程不提及
 
 **初始化部分的框架通常比较稳定，而且第一遍看下来可能会有很多不理解的地方。可以先从第二章往后开始入手，看到一定程度后再回头看。**
-
-
-
-**[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
-
-**[Github项目源码](https://github.com/MKXJun/DirectX11-With-Windows-SDK)**
-
-**欢迎加入QQ群: 727623616 可以一起探讨DX11，以及有什么问题也可以在这里汇报。**
 
 # 项目结构
 
@@ -976,13 +967,7 @@ D3DApp::~D3DApp()
 1. **尝试修改项目代码，让窗口内的显示变红。**
 2. 某些电脑可能有多于一个的显示适配器(显卡)。首先要通过`CreateDXGIFactory`创建`IDXGIFactory`，然后使用`IDXGIFactory::EnumAdapters`来枚举显示适配器。尝试通过这种方式查看你的电脑有多少个显示适配器(`IDXGIAdapter`)，并察看它们的信息。
 3. 一个显示适配器可能关联了多个输出设备(`IDXGIOutput`)，你可以使用`IDXGIAdapter::EnumOutputs`方法来枚举出特定的输出，尝试观察它们的信息。
-   ![](../Images/1172605-20181120125051905-1850534891.png)
+   ![](../Assets/01/06.png)
 4. 对于给定的像素格式，一个输出设备可以支持许多种显示模式(DXGI_MODE_DESC)，通过它可以看到全屏宽度、高度、刷新率。尝试使用`IDXGIOutput::GetDisplayModeList`方法观察所有支持的模式(传递`DXGI_FORMAT_R8G8B8A8_UNORM`格式进去)。
 5. **默认情况下的窗口程序是可以通过ALT+ENTER来进入/退出全屏的。此外，我们可以通过`IDXGISwapChain`来动态设置窗口全屏属性，找到对应的方法并尝试一下。**
 6. **现在尝试指定显示适配器来创建D3D设备。通过`CreateDXGIFactory`函数来创建`IDXGIFactory`，通常它会包含接口`IDXGIFactory1`，但有可能它也会包含接口`IDXGIFactory2`。在没有创建D3D设备的情况下，这种方式就可以帮助我们了解是否可以创建出Direct3D 11.1的设备。为了能够指定显示适配器来创建D3D11设备，我们需要将`D3D_DRIVER_TYPE`强行设置为`D3D_DRIVER_TYPE_UNKNOWN`，否则在创建设备的时候会得到如下报错信息：`DX ERROR: D3D11CreateDevice: When creating a device from an existing adapter (i.e. pAdapter is non-NULL), DriverType must be D3D_DRIVER_TYPE_UNKNOWN. [ INITIALIZATION ERROR #3146141: ]`。**
-
-**[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
-
-**[Github项目源码](https://github.com/MKXJun/DirectX11-With-Windows-SDK)**
-
-**欢迎加入QQ群: 727623616 可以一起探讨DX11，以及有什么问题也可以在这里汇报。**
