--- a/docs/part1/06.md
+++ b/docs/part1/06.md
@@ -6,12 +6,6 @@
 
 `Mouse`类和`Keyboard`类都在名称空间`DirectX`内。
 
-**[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
-
-**[Github项目源码](https://github.com/MKXJun/DirectX11-With-Windows-SDK)**
-
-**欢迎加入QQ群: 727623616 可以一起探讨DX11，以及有什么问题也可以在这里汇报。**
-
 # 鼠标输入
 
 `Mouse`类是一个单例类，我们可以通过`Mouse::Get()`静态方法来获取该实例：
@@ -317,13 +311,13 @@ LRESULT D3DApp::MsgProc(HWND hwnd, UINT msg, WPARAM wParam, LPARAM lParam)
 
 补充说明：当你打开`Mouse.cpp`和`Keyboard.cpp`查看源码的时候，大概率会遇到下面的报错：
 
-![](https://img2020.cnblogs.com/blog/1172605/202108/1172605-20210808115446811-117736657.png)
+![](..\assets\06\01.png)
 
 你可以直接无视该错误继续编译，即便到VS2019这个情况依然存在。
 
 现在来看看当前章节对应的项目。该程序使用键盘的WSAD四个键控制立方体旋转，或者鼠标拖动旋转。
 
-![](https://img2020.cnblogs.com/blog/1172605/202108/1172605-20210808115434954-402339480.gif)
+![](..\assets\06\02.gif)
 
 **[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
 
