--- a/docs/part1/08.md
+++ b/docs/part1/08.md
@@ -10,16 +10,10 @@
 
 对于个人来说，第一种方式做起来比较麻烦。对于第二种方法，我通过查阅MSDN文档，并进行了一定尝试，很快就实现了文字显示。因此接下来将围绕第二种方法进行讨论（这里不关注贴位图和绘制几何体等在Direct2D的其余操作，这些都可以在Direct3D做到）
 
-**[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
-
-**[Github项目源码](https://github.com/MKXJun/DirectX11-With-Windows-SDK)**
-
-**欢迎加入QQ群: 727623616 可以一起探讨DX11，以及有什么问题也可以在这里汇报。**
-
 # 通过DXGI进行互操作
 从 Direct3D 10.1开始， Direct3D Runtime使用DXGI进行资源管理。DXGI Runtime提供了跨进程共享视频内存图面的功能，并且可用作其他基于视频内存的运行时平台的基础。Direct2D 使用 DXGI 与 Direct3D 交互，并且交互下的Direct2D的内容绘制实际上也是基于Direct3D来实现的。下图通过图形调试器可以佐证这一点：
 
-![](https://img2018.cnblogs.com/blog/1172605/201904/1172605-20190416154721053-116458915.png)
+![](..\assets\08\01.png)
 
 这里的对象2为D3D立即设备上下文。
 
@@ -385,16 +379,9 @@ void GameApp::DrawScene()
 ```
 
 最终效果如下：
-![](https://img2018.cnblogs.com/blog/1172605/201905/1172605-20190501164838188-368847249.gif)
+![](..\assets\08\02.gif)
 
 
-
-
-**[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
-
-**[Github项目源码](https://github.com/MKXJun/DirectX11-With-Windows-SDK)**
-
-**欢迎加入QQ群: 727623616 可以一起探讨DX11，以及有什么问题也可以在这里汇报。**
 
 参考文章如下：
 
