--- a/docs/part1/10.md
+++ b/docs/part1/10.md
@@ -1,14 +1,6 @@
 # 前言
 
-**注意：本教程仅针对代码版本1.27.2及更高版本的项目，仍在使用旧版本代码的用户请留意更新项目代码**
-
 在本教程中，以前的第一人称摄像机实现是源自龙书的做法。考虑到摄像机的观察矩阵和物体的世界矩阵实质上是有一定的联系，因此可以将这部分变换给剥离出来，使用统一的`Transform`类，然后摄像机类与游戏对象类都使用`Transform`类来分别完成观察变换、世界变换。
-
-**[DirectX11 With Windows SDK完整目录](http://www.cnblogs.com/X-Jun/p/9028764.html)**
-
-**[Github项目源码](https://github.com/MKXJun/DirectX11-With-Windows-SDK)**
-
-**欢迎加入QQ群: 727623616 可以一起探讨DX11，以及有什么问题也可以在这里汇报。**
 
 # Transform类
 
@@ -1327,7 +1319,7 @@ void GameApp::UpdateScene(float dt)
 ```
 
 其中对摄像机位置使用`XMVectorClamp`函数是为了将X, Y和Z值都限制在范围为`[-8.9, 8.9]`的立方体活动区域防止跑出场景区域外，但使用第三人称摄像机的时候没有这样的限制，因为可以营造出一种透视观察的效果。
-![](https://images2018.cnblogs.com/blog/1172605/201807/1172605-20180716154222598-1125386474.png)
+![](..\assets\10\01.png)
 
 
 
@@ -1364,11 +1356,11 @@ void GameApp::DrawScene()
 
 最后下面演示了三种模式下的操作效果：
 
-![](https://images2018.cnblogs.com/blog/1172605/201807/1172605-20180716154042735-803177200.gif)
+![](..\assets\10\02.gif)
 
-![](https://images2018.cnblogs.com/blog/1172605/201807/1172605-20180716154130125-249039124.gif)
+![](..\assets\10\03.gif)
 
-![](https://images2018.cnblogs.com/blog/1172605/201807/1172605-20180716154159007-705912445.gif)
+![](..\assets\10\04.gif)
 
 # 练习题
 
