调整图片文字问题

--- a/docs/part1/09.md
+++ b/docs/part1/09.md
@@ -138,12 +138,14 @@ $$\mathbf{p} = t\mathbf{p_1} + (1 - t)\mathbf{p_0}$$
 3. X和Y方向均使用线性插值法
 
 下图展示了双线性插值法的过程，已知4个相邻像素点，当前采样的纹理坐标在这四个点内，则首先根据x方向的纹理坐标进行线性插值，然后根据y方向的纹理坐标再进行一遍线性插值：
+
 ![](..\assets\09\04.png)
 
 
 </br>
 
 而下图则演示了两种插值法的效果，其中左边使用了常量插值法，右边使用了二维线性插值法
+
 ![](..\assets\09\05.png)
 
 ## 图片的缩小
@@ -155,6 +157,8 @@ $$\mathbf{p} = t\mathbf{p_1} + (1 - t)\mathbf{p_0}$$
 其中mipmap等级为0的纹理即为原来的纹理，等级为1的纹理所占内存为等级为0的1/4，等级为2的纹理所占内存为等级为1的1/4...以此类推我们可以知道包含完整mipmap的纹理占用的内存空间不超过原来纹理的
 
 $$\lim_{n \to +\infty} \frac{1(1-(\frac{1}{4})^n)}{1-\frac{1}{4}} = \frac{1}{1-\frac{1}{4}} = \frac{4}{3}$$
+
+
 
 ![](..\assets\09\06.png)
 
@@ -169,6 +173,7 @@ $$\lim_{n \to +\infty} \frac{1(1-(\frac{1}{4})^n)}{1-\frac{1}{4}} = \frac{1}{1-\
 Anisotropic Filtering可以帮助我们处理那些不与屏幕平行的平面，需要额外使用平面的法向量和摄像机的观察方向向量。虽然使用该种过滤器会有比较大的性能损耗，但是能诞生出比较理想的效果。
 
 下面左图使用了线性过滤法，右边使用的是各向异性过滤，可以看到顶面纹理比左边的更加清晰
+
 ![](..\assets\09\07.png)
 
 # 对纹理进行采样
@@ -425,18 +430,23 @@ typedef struct D3D11_SAMPLER_DESC
 `D3D11_TEXTURE_ADDRESS_MODE`是单个方向的寻址模式，有时候纹理坐标会超过1.0或者小于0.0，这时候寻址模式可以解释边界外的情况，含义如下：
 
 `D3D11_TEXTURE_ADDRESS_WRAP`是将指定纹理坐标分量的值[t, t + 1], t ∈ Z映射到[0.0, 1.0]，因此作用到u和v分量时看起来就像是把用一张贴图紧密平铺到其他位置上：
+
 ![](..\assets\09\08.png)
 
 `D3D11_TEXTURE_ADDRESS_MIRROR`在每个整数点处翻转纹理坐标值。例如u在[0.0, 1.0]按正常纹理坐标寻址，在[1.0, 2.0]内则翻转，在[2.0, 3.0]内又回到正常的寻址，以此类推：
+
 ![](..\assets\09\09.png)
 
 `D3D11_TEXTURE_ADDRESS_CLAMP`对指定纹理坐标分量，小于0.0的值都取作0.0，大于1.0的值都取作1.0，在[0.0, 1.0]的纹理坐标不变：
+
 ![](..\assets\09\10.png)
 
 `D3D11_TEXTURE_BORDER_COLOR`对于指定纹理坐标分量的值在[0.0, 1.0]外的区域都使用`BorderColor`进行填充
+
 ![](..\assets\09\11.png)
 
 `D3D11_TEXTURE_ADDRESS_MIRROR_ONCE`相当于MIRROR和CLAMP的结合，仅[-1.0,1.0]的范围内镜像有效，若小于-1.0则取-1.0，大于1.0则取1.0，在[-1.0, 0.0]进行翻转。
+
 ![](..\assets\09\12.png)
 
 
@@ -702,6 +712,7 @@ void GameApp::UpdateScene(float dt)
 ```
 
 最终的显示效果如下：
+
 ![](..\assets\09\14.png)
 
 
@@ -712,10 +723,15 @@ void GameApp::UpdateScene(float dt)
 1. **自己动手将过滤器修改为常量插值法、线性插值法、各向异性过滤，观察立方体盒的效果**
 2. **尝试在使用`Geometry::MeshData`创建的立方体网格数据（不能对其修改）的基础上，让立方体的六个面使用不同的纹理来绘制，可以使用魔方项目里的纹理**
 3. 使用教程项目第26章Texture文件夹中的flare.dds和flarealpha.dds，在着色器中通过分量乘法实现
-   ![](..\assets\09\15.png)
-     然后让纹理在立方体的表面旋转（考虑对纹理坐标的变换），纹理采样器的寻址模式使用BORDER_COLOR，边界色为黑色。效果如下：
-     ![](..\assets\09\16.gif)
-     着色器需要提供两个纹理，并在一个顶点着色器、一个像素着色器完成任务。
-     **提示：需通过旋转矩阵（4x4矩阵）对纹理坐标进行变换来实现。**
+
+![](..\assets\09\15.png)
+
+​    然后让纹理在立方体的表面旋转（考虑对纹理坐标的变换），纹理采样器的寻址模式使用BORDER_COLOR，边界色为黑色。效果如下：
+
+![](..\assets\09\16.gif)
+
+​    着色器需要提供两个纹理，并在一个顶点着色器、一个像素着色器完成任务。
+​    **提示：需通过旋转矩阵（4x4矩阵)对纹理坐标进行变换来实现。**
+
 4. **如果你阅读过"深入理解与使用2D纹理资源"这篇，那么尝试用一个纹理数组存储所有的火焰纹理，在HLSL中使用`Texture2DArray`**
 
