--- a/docs/part1/01.md
+++ b/docs/part1/01.md
@@ -967,7 +967,8 @@ D3DApp::~D3DApp()
 1. **尝试修改项目代码，让窗口内的显示变红。**
 2. 某些电脑可能有多于一个的显示适配器(显卡)。首先要通过`CreateDXGIFactory`创建`IDXGIFactory`，然后使用`IDXGIFactory::EnumAdapters`来枚举显示适配器。尝试通过这种方式查看你的电脑有多少个显示适配器(`IDXGIAdapter`)，并察看它们的信息。
 3. 一个显示适配器可能关联了多个输出设备(`IDXGIOutput`)，你可以使用`IDXGIAdapter::EnumOutputs`方法来枚举出特定的输出，尝试观察它们的信息。
-   ![](../Assets/01/06.png)
+
+   ![](../assets/01/06.png)
 4. 对于给定的像素格式，一个输出设备可以支持许多种显示模式(DXGI_MODE_DESC)，通过它可以看到全屏宽度、高度、刷新率。尝试使用`IDXGIOutput::GetDisplayModeList`方法观察所有支持的模式(传递`DXGI_FORMAT_R8G8B8A8_UNORM`格式进去)。
 5. **默认情况下的窗口程序是可以通过ALT+ENTER来进入/退出全屏的。此外，我们可以通过`IDXGISwapChain`来动态设置窗口全屏属性，找到对应的方法并尝试一下。**
 6. **现在尝试指定显示适配器来创建D3D设备。通过`CreateDXGIFactory`函数来创建`IDXGIFactory`，通常它会包含接口`IDXGIFactory1`，但有可能它也会包含接口`IDXGIFactory2`。在没有创建D3D设备的情况下，这种方式就可以帮助我们了解是否可以创建出Direct3D 11.1的设备。为了能够指定显示适配器来创建D3D11设备，我们需要将`D3D_DRIVER_TYPE`强行设置为`D3D_DRIVER_TYPE_UNKNOWN`，否则在创建设备的时候会得到如下报错信息：`DX ERROR: D3D11CreateDevice: When creating a device from an existing adapter (i.e. pAdapter is non-NULL), DriverType must be D3D_DRIVER_TYPE_UNKNOWN. [ INITIALIZATION ERROR #3146141: ]`。**
