--- a/docs/part1/04.md
+++ b/docs/part1/04.md
@@ -48,7 +48,7 @@ Direct3D中，矩阵通常被表示为**行矩阵**，即你将要使用到的Di
 ![](..\assets\04\04.png)
 
 现有一坐标(2,4,1)，上述变换过程可以用下面的矩阵乘法表示：
-`
+
 $$
 \begin{bmatrix} 2 & 4 & 1\end{bmatrix}\begin{bmatrix} 
 1 & 0 & 0 \\
@@ -56,7 +56,7 @@ $$
 1 & 0 & 1 \\
 \end{bmatrix}=\begin{bmatrix} 3 & 2 & 1\end{bmatrix}
 $$
-`
+
 
 其中3x3矩阵的3个行向量从上往下依次为变换后的坐标基的x'轴(或向量i')、y'轴(或向量j')和z'轴(或向量k')。这种变换的一般形式为：
 
@@ -596,7 +596,7 @@ P_{ortho}=\begin{bmatrix}
 $$
 故最终的透视投影矩阵为：
 $$
-\begin{align}
+\begin{aligned}
 P_{persp}&=P_{persp\rightarrow ortho} P_{ortho} \\
 &= \begin{bmatrix}
 n & 0 & 0 & 0 \\
@@ -615,7 +615,7 @@ n & 0 & 0 & 0 \\
 0 & 0 & \frac{f}{f-n} & 1 \\
 0 & 0 & -\frac{nf}{f-n} & 0 \\
 \end{bmatrix}
-\end{align}
+\end{aligned}
 $$
 
 ### 归一化深度值
