--- a/docs/part1/10.md
+++ b/docs/part1/10.md
@@ -271,7 +271,7 @@ void Transform::LookTo(const XMFLOAT3& direction, const XMFLOAT3& up)
 
 在Z-X-Y的旋转顺序下，由旋转欧拉角产生的旋转矩阵为：
 $$
-\begin{align}
+\begin{aligned}
 \mathbf{R_z(\theta_{z})R_x(\theta_{x})R_y(\theta_{y})} &=
 \begin{bmatrix} 
 cos\theta_{z} & sin\theta_{z} & 0 & 0 \\
@@ -297,7 +297,7 @@ cos\theta_{z}sin\theta_{x}sin\theta_{y}-sin\theta_{z}cos\theta_{y} & cos\theta_{
 cos\theta_{x}sin\theta_{y} & -sin\theta_{x} & cos\theta_{x}cos\theta_{y} & 0 \\
 0 & 0 & 0 & 1 \\
 \end{bmatrix}
-\end{align}
+\end{aligned}
 $$
 在DirectXMath中我们可以调用`XMMatrixRotationRollPitchYaw`或`XMMatrixRotationRollPitchYawFromVector`函数来获取变换矩阵。
 
