语法高亮问题

--- a/docs/part1/07.md
+++ b/docs/part1/07.md
@@ -126,7 +126,7 @@ struct Material
 
 在HLSL中则表示为：
 
-```cpp
+```hlsl
 // 物体表面材质
 struct Material
 {
@@ -231,7 +231,7 @@ struct DirectionalLight
 
 在HLSL则表示为：
 
-```cpp
+```hlsl
 struct DirectionalLight
 {
     float4 Ambient;
@@ -244,7 +244,7 @@ struct DirectionalLight
 
 在HLSL中计算平行光/方向光的函数如下（光向量是与光照射方向相反的单位向量）：
 
-```cpp
+```hlsl
 void ComputeDirectionalLight(Material mat, DirectionalLight L,
     float3 normal, float3 toEye,
     out float4 ambient,
@@ -351,7 +351,7 @@ struct PointLight
 
 在HLSL中计算点光的函数如下
 
-```cpp
+```hlsl
 void ComputePointLight(Material mat, PointLight L, float3 pos, float3 normal, float3 toEye,
     out float4 ambient, out float4 diffuse, out float4 spec)
 {
@@ -447,7 +447,7 @@ struct SpotLight
 
 在HLSL中，则表示为：
 
-```cpp
+```hlsl
 struct SpotLight
 {
     float4 Ambient;
@@ -468,7 +468,7 @@ struct SpotLight
 
 在HLSL中计算聚光灯的函数如下
 
-```cpp
+```hlsl
 void ComputeSpotLight(Material mat, SpotLight L, float3 pos, float3 normal, float3 toEye,
     out float4 ambient, out float4 diffuse, out float4 spec)
 {
@@ -525,7 +525,7 @@ void ComputeSpotLight(Material mat, SpotLight L, float3 pos, float3 normal, floa
 
 然后Light_VS.hlsl和Light_PS.hlsl分别存放的是需要用到的顶点着色器和像素着色器
 
-```cpp
+```hlsl
 // Light.hlsli
 #include "LightHelper.hlsli"
 
@@ -566,7 +566,7 @@ struct VertexOut
 
 ```
 
-```cpp
+```hlsl
 // Light_VS.hlsl
 #include "Light.hlsli"
 
@@ -586,7 +586,7 @@ VertexOut VS(VertexIn vIn)
 
 ```
 
-```cpp
+```hlsl
 // Light_PS.hlsl
 #include "Light.hlsli"
 
