--- a/docs/part1/09.md
+++ b/docs/part1/09.md
@@ -190,7 +190,7 @@ g_Tex.Sample(g_SamLinear, pIn.Tex);
 
 `Basic.hlsli`代码如下：
 
-```cpp
+```hlsl
 #include "LightHelper.hlsli"
 
 Texture2D gTex : register(t0);
@@ -252,7 +252,7 @@ struct VertexPosHTex
 
 `Basic_VS_2D.hlsl`的代码：
 
-```cpp
+```hlsl
 // Basic_VS_2D.hlsl
 #include "Basic.hlsli"
 
@@ -268,7 +268,7 @@ VertexPosHTex VS_2D(VertexPosTex vIn)
 
 `Basic_PS_2D.hlsl`的代码：
 
-```cpp
+```hlsl
 // Basic_PS_2D.hlsl
 #include "Basic.hlsli"
 
@@ -281,7 +281,7 @@ float4 PS_2D(VertexPosHTex pIn) : SV_Target
 
 `Basic_VS_3D.hlsl`的代码：
 
-```cpp
+```hlsl
 // Basic_VS_3D.hlsl
 #include "Basic.hlsli"
 
@@ -304,7 +304,7 @@ VertexPosHWNormalTex VS_3D(VertexPosNormalTex vIn)
 
 `Basic_PS_3D.hlsl`的代码：
 
-```cpp
+```hlsl
 // Basic_PS_3D.hlsl
 #include "Basic.hlsli"
 
