--- a/docs/part1/10.md
+++ b/docs/part1/10.md
@@ -748,7 +748,7 @@ void ThirdPersonCamera::SetDistanceMinMax(float minDist, float maxDist)
 
 由于项目正在逐渐变得更加庞大，常量缓冲区会频繁更新，但是每次更新常量缓冲区都必须将整个块的内容都刷新一遍，如果只是为了更新里面其中一个变量就要进行一次块的刷新，这样会导致性能上的损耗。所以将常量缓冲区根据刷新频率和类别来进行更细致的分块，尽可能（但不一定能完全做到）保证每一次更新都不会有变量在进行无意义的刷新。因此HLSL常量缓冲区的变化如下：
 
-```cpp
+```hlsl
 cbuffer CBChangesEveryDrawing : register(b0)
 {
     matrix g_World;
