--- a/docs/part2/25.md
+++ b/docs/part2/25.md
@@ -36,7 +36,7 @@ $$f(x) = (0.5x + 0.5) * 255$$
 
 而如果现在拿到的是24位法向量，要进行还原，则可以用下面的公式：
 
-$$ f^-1(x) = \frac{2x}{255} - 1$$
+$$ f^{-1}(x) = \frac{2x}{255} - 1$$
 
 当然，经过还原后的法向量是有部分的精度损失了，至少能够映射回[-1, 1]的区间上。
 
