--- a/docs/part3/28.md
+++ b/docs/part3/28.md
@@ -22,11 +22,11 @@
 
 如下图所示，我们先在xz平面内“铺设”一层栅格
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\01.png)
+![](..\assets\28\01.png)
 
 然后我们再运用函数$y=f(x, z)$来为每个栅格点获取对应的y坐标。再利用$(x, f(x, z), z)$的所有顶点构造出地形栅格
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\02.png)
+![](..\assets\28\02.png)
 
 ## 生成栅格顶点
 
@@ -56,7 +56,7 @@ template<class VertexType = VertexPosNormalTex, class IndexType = DWORD>
 
 我们的代码是从左下角开始，逐渐向右向上地计算出其余顶点坐标。需要注意的是，纹理坐标是以左上角为坐标原点，U轴朝右，V轴朝下。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\03.png)
+![](..\assets\28\03.png)
 
 下面的代码展示了如何生成栅格顶点：
 
@@ -136,7 +136,7 @@ template<class VertexType, class IndexType>
 
 其中需要额外了解的是切线向量的产生。由于要让切线向量能够与xOy平面平行，需要先让法向量投影到xOy平面，然后再得到对应的未经标准化的切线向量，如下图所示：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\04.png)
+![](..\assets\28\04.png)
 
 ## 一种表示山峰的函数
 
@@ -158,7 +158,7 @@ $$
 \frac{\partial{y}}{\partial{z}}=\frac{3}{10}(sin(\frac{1}{10}x)-\frac{1}{10}xsin(\frac{1}{10}z))
 $$
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\05.png)
+![](..\assets\28\05.png)
 
 因此创建上述地形的函数可以写成：
 
@@ -199,7 +199,7 @@ MeshData<VertexPosNormalTex, DWORD> landMesh = Geometry::CreateTerrain(XMFLOAT2(
 
 波动方程是一个描述在持续张力作用下的一维绳索或二维表面的某一点处的运动。在一维情况下，我们可以考虑将一个富有弹性的绳索紧紧绑在两端（有轻微拉伸），让绳索落在x轴上来派生出一维的波动方程。我们假定当前的绳索在每一点处的线密度(单位长度下的质量)都是恒等的`ρ`，并且沿着绳索在该点处受到沿着切线的方向持续的张力`T`。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\06.png)
+![](..\assets\28\06.png)
 
 令函数$z(x,t)$代表绳索在x点处，t时刻的垂直位移量。当绳索在z方向产生位移时，表明绳子正在被拉伸。由牛顿第二定律，我们可以知道在t时刻内，位于$x=s$和$x=s+\Delta x$之间的绳索段在合力$\mathbf{F}(x, t)$的作用下，加速度为：
 
@@ -211,7 +211,7 @@ $$
 H(s,t)=Tcos\theta \\
 V(s,t)=Tsin\theta \tag{28.2}
 $$
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\07.png)
+![](..\assets\28\07.png)
 
 让$\theta+\Delta\theta$表示另一个端点$x=s+\Delta x$处切线向量与x轴的夹角。这样作用在该端点上的张力的水平分量$H(s+\Delta x,t)$和垂直分量$V(s+\Delta x,t)$则表示为：
 $$
@@ -268,7 +268,7 @@ $$
 
 满足一维波动方程的解有无穷多个，例如一种常见的波函数形式为$z(x,t)=Asin(\omega(t-\frac{x}{v}))$，函数随着时间的推移图像如下：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\08.gif)
+![](..\assets\28\08.gif)
 
 
 
@@ -284,7 +284,7 @@ $$
 
 假定我们的流体表面可以表示成一个n×m的矩形栅格，如下图所示。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\09.png)
+![](..\assets\28\09.png)
 
 其中d为两个邻近顶点在x方向的距离及y方向的距离（规定相等），t为时间间隔。我们用$z(i, j, k)$来表示顶点的位移量，其中i和j分别要满足$0\leq i<n$及$0\leq j<m$，代表世界位置(i*d, j*d)的顶点。k则用来表示时间。因此，$z(i, j, k)$等价于顶点(id, jd)在t时刻的z方向位移。
 
@@ -297,7 +297,7 @@ $$
 &=\frac{z(i+1,j,k)-z(i-1,j,k)}{2d} \\
 \end{split} \end{equation} \tag{28.15}
 $$
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\10.png)
+![](..\assets\28\10.png)
 
 同理，我们取顶点`[i][j]`的两个y方向上的相邻顶点`[i][j-1]`和`[i][j+1]`来近似计算z对于y的偏导数：
 $$
@@ -1103,7 +1103,7 @@ void GpuWavesRender::Draw(ID3D11DeviceContext* deviceContext, BasicEffect& effec
 
 下图演示了GPU绘制的水波效果。由于限制了10M上传，只能勉强看到这一小段了。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\11.gif)
+![](..\assets\28\11.gif)
 
 RTX2070 Mobile 测试帧数如下：
 
@@ -1116,7 +1116,7 @@ Debug的话又是vector那边惹出的问题，忽略不计。
 
 只不过当前的样例跟龙书的样例都没有处理好视角带来的混合问题，因为透明混合需要按深度排序，在下一章我们将着重于解决这个问题：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\28\12.gif)
+![](..\assets\28\12.gif)
 
 # 练习题
 
