--- a/docs/part3/30.md
+++ b/docs/part3/30.md
@@ -19,13 +19,13 @@ H_{ij}=\sum_{r=-a}^{a}\sum_{c=-b}^{b}W_{rc}P_{i+r,j+c}
 $$
 若内核的所有权值的和为1，则它可以用来做模糊处理；如果权值和大于0小于1，则处理后的图像会随着颜色的缺失而变暗；如果权值和大于1，则处理后的图像会随着颜色的增添而更加明亮。当然也会有权值和等于0甚至可能小于0的情况，比如索贝尔算子。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\01.png)
+![](..\assets\30\01.png)
 
 # 图像模糊
 
 在保证权值和为1的前提下，我们就能用多种不同的方法来计算它。其中就有一种广为人知的模糊运算：高斯模糊（Gaussian blur）。该算法借助高斯函数$G(x)=exp(-\frac{x^2}{2\sigma^2})$来获取权值。下图展示了取不同σ值时高斯函数的对应图像：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\02.png)
+![](..\assets\30\02.png)
 
 可以看到，若σ越大，则曲线越趋于平缓，给邻近点所赋予的权值也就越大。
 $$
@@ -104,7 +104,7 @@ $$
 
 1D纵向模糊于上述1D横向模糊的情况相似。在纵向模糊过程中，线程组就像由256个线程构成的垂直线段，每个线程只负责图像中一个像素的模糊运算。因此，为了使图像中的每个像素都能得到模糊处理，我们需要在y方向上调度$ceil(\frac{h}{256})$个线程组，并在x方向上调度w个线程组。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\03.png)
+![](..\assets\30\03.png)
 
 现在来考虑对一个28x14像素的纹理进行处理，我们所用的横向、纵向线程组的规模分别为8x1和1x8（采用X×Y的表示格式）。对于水平方向的处理过程来说，为了处理所有的像素，我们需要在x方向上调度$ceil(\frac{w}{8})=ceil(\frac{28}{8})=4$个线程组，并在y方向上调度14个线程组。由于28并不能被8整除，所以最右侧的线程组中会有$(4\times 8-28)\times 14=56$个线程声明都不做。对于垂直方向的处理过程而言，为了处理所有的像素，我们需要在y方向上分派$ceil(\frac{h}{8})=ceil(\frac{14}{8})=2$个线程组，并在x方向上调度28个线程组。同理，由于14并不能被8整除，所以最下侧的线程组中会有$(2\times 8 - 14)\times 28$个闲置的线程。沿用同一思路就可以将线程组扩展为256个线程的规模来处理更大的纹理。
 
@@ -180,23 +180,23 @@ void BlurFilter::Execute(ID3D11DeviceContext* deviceContext, ID3D11ShaderResourc
 
 在上面的代码中，我们可以看到调度的线程组是由256个线程构成的水平“线段”，每个线程都负责图像中一个像素的模糊操作。一种低效的实现方案是，每个线程都简单地计算出以正在处理的像素为中心的行矩阵（因为我们现在正在进行的是1D横向模糊处理，所以要针对行矩阵进行计算）的加权平均值。这种办法的缺点是需要多次拾取同一纹素。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\04.png)
+![](..\assets\30\04.png)
 
 仅考虑输入图像中的这两个相邻像素，假设模糊核为1×7。光是在对这两个像素进行模糊的过程中，8个不同的像素中就已经有6个被采集了2次，而且要考虑到访问设备内存的效率在GPU内存模型中是属于比较慢的一种。
 
 我们可以根据前面一节提到的模糊处理策略，利用共享内存来优化上述算法。这样一来，每个线程就可以在共享内存中读取或存储所需的纹素数据。待所有线程都从共享内存读取到它们所需的纹素后，就能够执行模糊运算了。不得不说，从共享内存中读取数据的速度飞快。除此之外，还有一件棘手的事情，就是利用具有n = 256个线程的线程组行模糊运算的时候，却需要n + 2R个纹素数据，这里的R就是模糊半径：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\05.png)
+![](..\assets\30\05.png)
 
 由于模糊半径的原因，在处理线程组边界附近的像素时，可能会读取线程组以外存在“越界”情况的像素。解决办法其实也并不复杂。我们只需要分配出能容纳n + 2R个元素的共享内存，并且有2R个线程要各获取两个纹素数据。唯一麻烦的地方就是在共享内存时要多花心思，因为组内线程ID此时不能于共享内存中的元素一一对应了。下图演示了当R=4时，从线程到共享内存的映射过程。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\06.png)
+![](..\assets\30\06.png)
 
 在此例中，R = 4。最左侧的4个线程以及最右侧的4个线程，每个都要读取2个纹素数据，并将它们存于共享内存之中。而这8个线程之外的所有线程都只需要读取1个像素，并将其存于共享内存之中。这样一来，我们即可以得到以模糊半径R对N个像素进行模糊处理所需的所有纹素数据。
 
 现在要讨论的是最后一种情况，即下图中所示的最左侧于最右侧的线程组在**索引**输入图像时会发生越界的情形。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\07.png)
+![](..\assets\30\07.png)
 
 前面提到，从越界的索引处读取数据并不是非法操作，而是返回0（对越界索引处进行写入是不会执行任何操作的，即no-op）。然而，我们在读取越界数据时并不希望得到数据0，因为这意味着值为0的颜色（即黑色）会影响到边界处的模糊结果。我们此时期盼能实现出类似于**钳位**（clamp）纹理寻址模式的效果，即在读取越界的数据时，能够获得一个与边界纹素相同的数据。这个方案可以通过对索引进行钳位来加以实现，在下面完整的着色器代码可以看到（这里将模糊半径调大了）：
 
@@ -304,15 +304,15 @@ void CS(int3 GTid : SV_GroupThreadID,
 
 运用索贝尔算子后的结果：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\08.png)
+![](..\assets\30\08.png)
 
 索贝尔算子的逆图像的结果：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\09.png)
+![](..\assets\30\09.png)
 
 如果将原始图像与其经过索贝尔算子生成的逆图像两者间的对应颜色值相乘，我们将获得类似于卡通画或动漫书中那样，其边缘就像用黑色的笔勾描后的图片效果。哪怕待处理的图像首先经过模糊处理后已经隐去了部分细节，依旧可以恢复其相对粗犷的画风，令其边缘清晰起来。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\10.png)
+![](..\assets\30\10.png)
 
 索贝尔算子所采用的算法是先进行加权平均，然后进行近似求导运算，计算方法如下：
 $$
@@ -396,7 +396,7 @@ float4 PS(float4 posH : SV_Position, float2 tex : TEXCOORD) : SV_Target
 
 本样例为高斯模糊提供了调整模糊半径、Sigma和次数的功能。模糊半径越大，模糊次数越大，帧数会越低。如果你的电脑配置承受不住，建议关掉OIT来观察模糊效果会更好一些。至于Sobel算子则无法调整。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\30\11.gif)
+![](..\assets\30\11.gif)
 
 整个计算着色器的内容就到此结束了。
 
