--- a/docs/part3/31.md
+++ b/docs/part3/31.md
@@ -20,11 +20,11 @@
 
 以下图为例，眼睛观察到地面上最左边的一点，并且从光源处观察也能看到该点。因此该点不会产生阴影。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\01.png)
+![](..\assets\31\01.png)
 
 再看下面的图，眼睛可以观察到地面上中间那一点，但是从光源处观察不能看到该点。因此该点会产生阴影。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\02.png)
+![](..\assets\31\02.png)
 
 具体落实下来应该怎么做呢？对于点光源来说，由于它的光是朝所有方向四射散开的，但为了方便，我们可以像摄像机那样选取视锥体区域（使用一个观察矩阵 + 透视投影矩阵来定义），然后经过正常的变换后就能计算出光源到区域内物体的深度值；而对于平行光（方向光）来说，我们可以采用正交投影的方式来选取一个长方体区域（使用一个观察矩阵 + 正交投影矩阵定义）。和一般的渲染流程不同的是，我们只需要记录深度值到深度缓冲区，而不需要将颜色绘制到后备缓冲区。
 
@@ -42,12 +42,12 @@
 
 而对于正交投影而言，我们也是一样的做法。正交投影的视景体是一个轴对齐于观察坐标系的长方体。尽管我们不好描述一个方向光的光源，但为了方便，我们把光源定义在视景体xOy切面中心所处的那条直线上。这样我们就只需要给出视景体的宽度、高度、近平面、远平面信息就可以构造出一个正交投影矩阵了。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\03.png)
+![](..\assets\31\03.png)
 
 
 我们可以看到，正交投影的投影线均平行于观察空间的z轴。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\04.png)
+![](..\assets\31\04.png)
 
 正交投影矩阵在第四章变换已经讲过，就不再赘述。
 
@@ -55,7 +55,7 @@
 
 投影纹理贴图技术能够将纹理投射到任意形状的几何体上，又因为其原理与投影机的工作方式比较相似，由此得名。例如下图中，右边的骷髅头纹理被投射到左边场景中的多个几何体上。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\05.png)
+![](..\assets\31\05.png)
 
 投影纹理贴图的关键在于为每个像素生成对应的**投影纹理坐标**，从视觉上给人一种纹理被投射到几何体上的感觉。
 
@@ -64,7 +64,7 @@
 1. 将3D空间中一点p投影到光源的投影窗口，并将其变换到NDC空间。
 2. 将投影坐标从NDC空间变换到纹理空间，以此将它们转换为纹理坐标
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\06.png)
+![](..\assets\31\06.png)
 
 
 而步骤2中的变换过程则取决于下面的坐标变换：
@@ -148,32 +148,32 @@ float4 PS(VertexOutBasic pIn) : SV_Target
 3. 上面算出的NDC坐标的xy分量变换为阴影贴图的纹理坐标uv，然后进行深度值采样，得到s(p)
 4. 当d(p) > s(p)时， 像素p位于阴影范围之内；自然相反地，当d(p) <= s(p)时，像素p位于阴影范围之外（至于为什么还有<，后面会提到）
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\07.png)
+![](..\assets\31\07.png)
 
 # 偏移与走样
 
 阴影图存储的是距离光源最近的可视像素深度值，但是它的分辨率有限，导致每一个阴影图纹素都要表示场景中的一片区域。因此，阴影图只是以光源视角针对场景深度进行的离散采样，这将会导致所谓的**阴影粉刺**等图像走样问题。如下图所示（注意图中地面上光影之间轮流交替的“阶梯状”条纹）：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\08.png)
+![](..\assets\31\08.png)
 
 
 而下图则简单展示了为什么会发生阴影粉刺这种现象。由于阴影图的分辨率有限，所以每个阴影图纹素要对应于长江中的一块区域（而不是点对点的关系，一个坡面代表阴影图中一个纹素的对应范围）。从观察点**E**查看场景中的两个点p1与p2，它们分别对应于两个不同的屏幕像素。但是，从光源的观察角度来看，它们却都有着相同的阴影图纹素（即s(p1)=s(p2)=s，由于分辨率的原因）。当我们在执行阴影图检测时，会得到d(p1) > s 及 d(p2) <= s这两个测试结果，这样一来，p1将会被绘制为如同它在阴影中的颜色，p2将被渲染为好似它在阴影之外的颜色，从而导致阴影粉刺。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\09.png)
+![](..\assets\31\09.png)
 
 因此，我们可以通过偏移阴影图中的深度值来防止出现错误的阴影效果。此时我们就可以保证d(p1) <= s 及 d(p2) <= s。但是寻找合适的深度偏移需要反复尝试。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\10.png)
+![](..\assets\31\10.png)
 
 
 偏移量过大会导致名为**peter-panning**（彼得·潘，即小飞侠，他曾在一次逃跑时弄丢了自己的影子）的失真效果，使得阴影看起来与物体相分离。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\11.png)
+![](..\assets\31\11.png)
 
 
 然而，并没有哪一种固定的偏移量可以正确地运用于所有几何体的阴影绘制。特别是下图那种（从光源的角度来看）有着极大斜率的三角形，这时候就需要选取更大的偏移量。但是，如果试图通过一个过大的深度偏移量来处理所有的斜边，则又会造成peter-panning问题。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\12.png)
+![](..\assets\31\12.png)
 
 
 因此，我们绘制阴影的方式就是先以光源视角度量多边形斜面的斜率，并为斜率较大的多边形应用更大的偏移量。而图形硬件内部对此有相关技术的支持，我们通过名为**斜率缩放偏移**的光栅化状态属性就能够轻松实现。
@@ -245,7 +245,7 @@ MSDN文档[Depth Bias](https://docs.microsoft.com/zh-cn/windows/win32/direct3d11
 
 出于这样的原因，我们应该对采样的结果进行插值，而不是对深度值进行插值。这种做法称为——**百分比渐近过滤**。即我们以点过滤（`MIN_MAG_MIP_POINT`)的方式在坐标(u, v)、(u+△x, v)、(u, v+△x)、(u+△x, v+△x)处对纹理进行采样，其中△x=1/SHADOW_MAP_SIZE(除以的是引用贴图的宽高)。由于是点采样，这4个采样点分别命中的是围绕坐标(u, v)最近的4个阴影图纹素**s0、s1、s2、s3**，如下图所示。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\13.png)
+![](..\assets\31\13.png)
 
 
 接下来，我们会对这些采集的深度值进行阴影图检测，并对测试的结果展开双线性插值。
@@ -289,7 +289,7 @@ return lerp(lerp(r0, r1, t.x), lerp(r2, r3, t.x), t.y);
 
 若采用这种计算方法，则一个像素就可能局部处于阴影之中，而不是非0即1.例如，若有4个样本，三个在阴影中，一个在阴影外，那么该像素有75%处于阴影之中。这就让阴影内外的像素之间有了更加平滑的过渡，而不是棱角分明。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\14.png)
+![](..\assets\31\14.png)
 
 
 但这种过滤方法产生的阴影看起来仍然非常生硬，且锯齿失真问题的最终处理效果还是不能令人十分满意。PCF的主要缺点是需要4个纹理样本，而纹理采样本身就是现代GPU代价较高的操作之一，因为存储器的带宽与延迟并没有随着GPU计算能力的剧增而得到相近程度的巨大改良。幸运的是，Direct3D 11+版本的图形硬件对PCF技术已经有了内部支持，上面的一大堆代码可以用`SampleCmpLevelZero`函数来替代。
@@ -795,13 +795,13 @@ void GameApp::DrawScene(ShadowEffect* pShadowEffect)
 
 本Demo提供了5种斜率下的方向光，对应主键盘数字键1-5，Q键开关法线贴图，E键开关阴影贴图的显示，G键切换阴影贴图的显示模式。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\15.gif)
+![](..\assets\31\15.gif)
 
 # 透明物体的阴影绘制
 
 但我们的例程还没有处理透明物体的阴影绘制。如果我们直接在场景中绘制一颗树（贴图存在Alpha值为0的部分），可以看到下图的阴影并不正确：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\16.png)
+![](..\assets\31\16.png)
 
 因此，我们需要在绘制阴影贴图的时候增加一个像素着色器用以进行Alpha裁剪，把Alpha值低于0.1的纹素给剔除掉，不要让其写入到阴影贴图：
 
@@ -830,7 +830,7 @@ void PS(VertexPosHTex pIn)
 
 我们只在绘制树的时候使用带有像素着色器的版本，其余物体照常绘制。并且因为我们的BasicEffect默认绘制就带有Alpha裁剪，无需做这部分改动。最终效果如下：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\31\17.png)
+![](..\assets\31\17.png)
 
 
 # 练习题
