--- a/docs/part3/33.md
+++ b/docs/part3/33.md
@@ -8,7 +8,7 @@
 
 曲面细分技术涉及到的三个阶段都是可选的，但如果要使用曲面细分，这三个阶段都是必须要经历的。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\01.png)
+![](..\assets\33\01.png)
 
 **学习目标：**
 
@@ -180,29 +180,29 @@ float3 HS(InputPatch<VertexOut, 4> patch, uint i : SV_OutputControlPointID, uint
 
 1. `integer`模式
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\02.gif)
+![](..\assets\33\02.gif)
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\03.gif)
+![](..\assets\33\03.gif)
 
 
 2. `fractional_odd`模式：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\04.gif)
+![](..\assets\33\04.gif)
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\05.gif)
+![](..\assets\33\05.gif)
 
 3. `fractional_even`模式：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\06.gif)
+![](..\assets\33\06.gif)
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\07.gif)
+![](..\assets\33\07.gif)
 
 
 ## 三角形面片的曲面细分示例
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\08.gif)
+![](..\assets\33\08.gif)
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\09.gif)
+![](..\assets\33\09.gif)
 
 
 # 域着色器
@@ -271,42 +271,42 @@ float4 DS(QuadPatchTess patchTess,
 
 现在我们先从二阶贝塞尔曲线开始，下面有3个非共线的控制点**b0**、**b1**和**b2**。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\10.png)
+![](..\assets\33\10.png)
 
 
 接下来我们用线性插值的方式，从**b0**到**b1**方向的线段使用参数**t**来确定其中一点，记为$\mathbf{b_{0}^{1}}$。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\11.png)
+![](..\assets\33\11.png)
 
 然后从**b1**到**b2**方向的线段使用同样的参数**t**来确定另一点，记为$\mathbf{b_{1}^{1}}$。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\12.png)
+![](..\assets\33\12.png)
 
 将$b_{0}^{1}$和$b_{1}^{1}$连接起来，问题降级为一阶贝塞尔曲线（直线）。我们对其再使用一次参数**t**的线性插值即可得到在参数**t**下该贝塞尔曲线的对应一点$\mathbf{b_{2}^{0}}$。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\13.png)
+![](..\assets\33\13.png)
 
 我们将**t**在`[0, 1]`的所有情况都求出来，就可以得到一条光滑的贝塞尔曲线。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\14.png)
+![](..\assets\33\14.png)
 
 三阶的贝塞尔曲线需要用到4个控制点，但做法也是类似的。首先求出**b0**到**b1**，**b1**到**b2**，**b2到b3**的线段在t时刻下的插值点$\mathbf{b_{0}^{1}}, \mathbf{b_{1}^{1}}, \mathbf{b_{2}^{1}}$，此时问题就被转化成了这三个控制点下的二阶贝塞尔曲线。不断降阶最终算出目标点即可。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\15.png)
+![](..\assets\33\15.png)
 
 可以看到，三阶贝塞尔曲线需要进行6次插值运算，二阶贝塞尔曲线则需要进行3次插值运算。以此类推，我们可以知道n阶贝塞尔曲线需要n(n+1)/2次运算
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\16.png)
+![](..\assets\33\16.png)
 
 ## 计算过程
 
 下图阐述了二阶贝塞尔曲线的计算过程
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\17.png)
+![](..\assets\33\17.png)
 
 观察**b0**、**b1**和**b2**的各项系数，可以发现它们满足二项式定理。我们也可以用下面的一个金字塔来描述
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\18.png)
+![](..\assets\33\18.png)
 
 从底端的这些控制点选取其中一个然后不断往上走，最终走到顶端点的过程中，如果走过一段朝着右上方向的路径，则给该控制点乘上因子**(1-t)**，而朝着左上方向的路径则给该控制点乘上因子**t**。比如从**b0**走到顶端的项为$t^3 b_{0}$。我们将这所有8条路径都加起来就可以得到最后的结果：
 $$
@@ -342,11 +342,11 @@ $$
 
 假设我们现在有两条三阶贝塞尔曲线**a**和**b**，那么当曲线**a**的最后一个控制点与曲线**b**的第一个控制点位置相同时，我们称这两条曲线满足**C0**连续。下图的红点为控制点，观察中间的控制点处显然满足这一性质，但是可以看到左右两端曲线的过渡并不是平缓的。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\19.png)
+![](..\assets\33\19.png)
 
 而如果在满足**C0**连续的基础上，曲线**a**在最后一个控制点处的导数还与曲线**b**在第一个控制点处的导数相等，则此时我们说这两条曲线满足**C1**连续。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\20.png)
+![](..\assets\33\20.png)
 
 而满足**C1**连续的控制点必然满足：
 $$
@@ -439,14 +439,14 @@ float4 DS(IsolinePatchTess patchTess,
 
 下面的动图展示了贝塞尔曲线的控制和细分
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\21.gif)
+![](..\assets\33\21.gif)
 
 
 # 贝塞尔曲面
 
 三阶贝塞尔曲线有4个控制点，而三阶贝塞尔曲面自然就有4x4控制点了。我们可以将其看做4条三次贝塞尔曲线。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\22.png)
+![](..\assets\33\22.png)
 
 这里就不再列出复杂的公式来晕人了。在一维情况下，贝塞尔曲线使用范围在`[0, 1]`的参数**t**来表示曲线上一点。那么在二维情况下，我们可以使用范围在`[0, 1]`的参数**(u, v)**来表示曲面上一点。
 
@@ -587,7 +587,7 @@ XMFLOAT3(+25.0f, 10.0f, -15.0f)
 
 下图展示了贝塞尔曲面
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\23.png)
+![](..\assets\33\23.png)
 
 # 练习题
 
@@ -596,4 +596,4 @@ XMFLOAT3(+25.0f, 10.0f, -15.0f)
 3. 修改本演示程序，利用光照使得其中的贝塞尔曲面表现出明暗变化。为此，我们需要在域着色器中计算顶点法线。而位于顶点处的法线可以用此曲面点处坐标的偏导数的叉积求得。
 4. **利用曲面细分绘制甜甜圈(torus)，要求input patch仅为8个float的数据，包含甜甜圈心的坐标xyz，轴方向xyz，外圈半径和内圈半径则分别存放在两个w上。hull shader的几何输出精度可以自己适当定义。（群内星大提供）**
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\33\24.png)
+![](..\assets\33\24.png)
