--- a/docs/part3/34.md
+++ b/docs/part3/34.md
@@ -25,7 +25,7 @@ $$
 
 其中标量h∈[0, 1]是从高度图得到的高度值。我们对高度值减1来让区间[0, 1]→[-1, 0]。因为表面的法向量通常是面向网格的外部，这意味着我们以**向内偏移**的方式来替代**向外偏移**。一般将几何体弹入会比将几何体拉出更为方便一些。标量s则是用来控制在世界空间的塌陷程度。这样高度值的将从[0, 1]→[-s, 0]，即高度值最大的时候将不会有向内的偏移，而高度值最小的时候将会产生最大的向内偏移。**通常我们会将高度图存放在法线贴图中的alpha通道。**
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\34\01.png)![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\34\02.png)
+![](..\assets\34\01.png)![](..\assets\34\02.png)
 
 生成高度图是一项艺术性的工作，纹理艺术家可以绘制它们，或者使用工具来产生（例如：[crazybump](https://www.crazybump.com)）
 
@@ -152,7 +152,7 @@ PatchTess PatchHS(InputPatch<TessVertexOut, 3> patch,
 
 那些与多个三角形所共享的边应当拥有相同的曲面细分因子，否则可能会出现网格三角形间的缝隙（见下图）。举个例子说下不计算曲面细分因子的情况，加入我们通过摄像机到三角形中心点的距离来计算内部曲面细分因子。然后我们将内部的曲面细分因子也设置到边缘曲面细分因子上。如果两个邻接三角形拥有不同的内部曲面细分因子，它们的边也将会拥有不同的曲面细分因子，从而导致在进行位移映射后会产生T型连接的缝隙效果。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\34\03.png)
+![](..\assets\34\03.png)
 
 可以看到，图a展示了两个三角形共享一条边。图b上面的三角形进行了一次边缘细分，下面的三角形则没有细分。图c上面的三角形进行了一次内部细分，经过位移映射后，新产生的顶点被移走了（一般是向内移动），从而在两个三角形之间产生了一条缝隙。
 
@@ -244,7 +244,7 @@ VertexOutNormalMap DS(PatchTess patchTess,
 
 如果我们只是学了法线贴图的话，到这里基本上就了解的差不多了。但如果学了阴影映射和SSAO的话，那么这里就又多了两个坑要填了。如果我们用了位移映射来绘制，那么在绘制阴影的时候，也一样要走一遍位移映射；对于SSAO来说也更是如此，如果不对SSAO写入深度值的过程加入位移映射，那么在正式绘制场景的时候就会因为像素深度值不一致而被剔除，从而导致了在运行龙书的SSAO Demo时，在开启了位移映射之后，那些拥有法线贴图的物体都没有被画出来的现象：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\34\04.png)
+![](..\assets\34\04.png)
 
 所以接下来做的事情就是体力活了，把DisplacementMap从顶点着色器到域着色器的实现原理也要搬运到绘制阴影图的过程，以及在SSAO绘制法向量/深度缓冲区顺便写入深度/模板缓冲区的过程中。因为代码上高度相似，这里我就只是列出本章新增的着色器文件列表：
 
@@ -269,8 +269,8 @@ VertexOutNormalMap DS(PatchTess patchTess,
 
 下面的动图展示了基础绘制、法线贴图绘制、位移贴图绘制下的区别，以及曲面细分前后网格的区别。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\34\05.gif)
+![](..\assets\34\05.gif)
 
 而下面的动图则展示了不同的HeightScale下位移映射的效果。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\34\06.gif)
+![](..\assets\34\06.gif)
