--- a/docs/part3/35.md
+++ b/docs/part3/35.md
@@ -34,7 +34,7 @@ C_x & C_y & C_z & 1\\
 \end{bmatrix}
 $$
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\35\01.png)
+![](..\assets\35\01.png)
 
 粒子的属性如下：
 
@@ -1027,7 +1027,7 @@ void GameApp::DrawScene()
 
 下面的动图演示了火焰和雨水的粒子系统效果：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\35\02.gif)
+![](..\assets\35\02.gif)
 
 
 # 练习题
