--- a/docs/part3/37.md
+++ b/docs/part3/37.md
@@ -21,7 +21,7 @@
 
 以下图为例，取黑色一行的分块，对应右边的一系列视锥体。对于区块B，右边的图的黑色线条反映的是在深度缓冲区对应位置的几何体深度信息。可以看到几何体的深度反映在一个比较小的范围，我们可以遍历该区块的所有深度值然后算出对应的zmin和zmax作为当前视锥体的近平面和远平面，从而缩小视锥体的大小，并更有效地剔除光源。
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\37\01.png)
+![](..\assets\37\01.png)
 
 ```hlsl
 // 确定分块(tile)的大小用于光照去除和相关的权衡取舍 
@@ -410,7 +410,7 @@ void ComputeShaderTileDeferredCS(uint3 groupId : SV_GroupID,
 
 我们直接从下图开始：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\37\02.png)
+![](..\assets\37\02.png)
 
 
 其中蓝色表示分片的子视锥体，黑色表示几何体的信息，黄色为点光源。在确定了当前子视锥体观察空间的zmin和zmax后，我们可以在这一深度范围内进一步均分成n个单元。右边表示的是我们对当前深度范围均分成了8份，如果当前光源位于某一份范围内，则把该光源对应的8位光源掩码的对应位置为1；同样如果当前深度范围内的所有几何体（以像素中的深度集合表示）位于某一份范围内，则把8位几何体掩码的对应位置置为1。如果光照掩码和几何体掩码的按位与运算为0，则表示对于该切片，当前光源不会产生任何光照计算从而应该剔除掉。
@@ -618,7 +618,7 @@ float4 ForwardPlusPS(VertexPosHVNormalVTex input) : SV_Target
 
 下面使用RTX 3080 Ti 对6种不同的渲染方式及4种MSAA等级的组合进行了帧数测试，结果如下：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\37\03.png)
+![](..\assets\37\03.png)
 
 其中TBDR(Defer Per Sample)是我们目前使用的方法，与TBDR的区别在于：
 
@@ -635,7 +635,7 @@ float4 ForwardPlusPS(VertexPosHVNormalVTex input) : SV_Target
 
 由于现在分辨率大了，GIF录起来很难压到10M内，这里就只放几张演示图跟操作说明
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\37\04.png)
+![](..\assets\37\04.png)
 
 
 - **MSAA**：默认关闭，可选2x、4x、8x
@@ -653,12 +653,12 @@ float4 ForwardPlusPS(VertexPosHVNormalVTex input) : SV_Target
 
 下图展示了每个分块的灯光数目（越亮表示此处产生影响的灯光数越多）：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\37\05.png)
+![](..\assets\37\05.png)
 
 
 下图展示了需要进行逐样本着色的区域（红色边缘区域）：
 
-![](E:\Code\Book\DirectX11-With-Windows-SDK-Book\docs\assets\37\06.png)
+![](..\assets\37\06.png)
 
 
 # 练习题
